images for new stories.

--- a/_posts/2014-02-03-odi-node.md
+++ b/_posts/2014-02-03-odi-node.md
@@ -1,8 +1,9 @@
 ---
 layout: news
-title:  "Leeds Regional Node"
+title:  "Leeds Regional ODI Node"
 date:   2014-01-03 
 categories: news
+image: "/img/odinode.jpg"
 --- 
 
 Since we were announced as the ODI Node for Leeds (and the Region) at the end of October, we  have been riding a wave of positive reaction, making new friends, building new connections and  having really interesting conversations about what “The ODI Node” could be. 
